package amber.dummy_proto;
option java_package = "pl.edu.agh.amber.driver.dummy.proto";
option java_outer_classname = "DummyProto";

import "drivermsg.proto";

extend amber.DriverMsg {
    optional bool enable = 50;
    optional string message = 51;
    optional bool get_status = 52;
}
